@@ -25,8 +25,9 @@ import javax.annotation.concurrent.NotThreadSafe;
 import org.apache.cassandra.index.sai.IndexContext;
 import org.apache.cassandra.index.sai.disk.format.IndexComponent;
 import org.apache.cassandra.index.sai.disk.format.IndexDescriptor;
-import org.apache.lucene.store.BufferedChecksumIndexInput;
+import org.apache.cassandra.index.sai.disk.io.IndexFileUtils;
 import org.apache.lucene.store.ByteArrayDataInput;
+import org.apache.lucene.store.ChecksumIndexInput;
 import org.apache.lucene.store.DataInput;
 import org.apache.lucene.store.IndexInput;
 import org.apache.lucene.util.BytesRef;
@@ -55,7 +56,7 @@ public class MetadataSource
     {
         Map<String, BytesRef> components = new HashMap<>();
 
-        try (BufferedChecksumIndexInput input = new BufferedChecksumIndexInput(indexInput))
+        try (ChecksumIndexInput input = IndexFileUtils.getBufferedChecksumIndexInput(indexInput))
         {
             SAICodecUtils.checkHeader(input);
             final int num = input.readInt();
