@@ -1,4 +1,5 @@
 5.0-alpha2
+ * Change the checksum algorithm SAI-related files use from CRC32 to CRC32C (CASSANDRA-18836)
  * Correctly remove Index.Group from IndexRegistry (CASSANDRA-18905)
  * Fix vector type to support DDM's mask_default function (CASSANDRA-18889)
  * Remove unnecessary reporter-config3 dependency (CASSANDRA-18907)
